# miniproof

./: .gitignore  LICENSE  README.md  miniproof.cabal  pbuild.toml
app/: Main.hs  Repl.hs
src/Prover/: Check.hs  Env.hs  Eval.hs  Parser.hs  Pretty.hs  Syntax.hs
test/: Main.hs
test/Test/: Check.hs  Eval.hs  Fixtures.hs  Parser.hs
test/fixtures/: basics.pf  equality.pf  fin.pf  inductive.pf  levels.pf  recursion.pf  universe.pf  vec.pf
